# python-example

./: README.rst  pyproject.toml
tests/: test_todo.py
todo/: entity.py
