[tool.poetry]
name = "todo"
version = "0.1.0"
description = "python example project for GSM student"
authors = ["Las-Wonho <haho013039@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
